; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/gspca/extr_xirlink_cit.c_cit_Packet_Format1.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/gspca/extr_xirlink_cit.c_cit_Packet_Format1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gspca_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gspca_dev*, i32, i32)* @cit_Packet_Format1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cit_Packet_Format1(%struct.gspca_dev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.gspca_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.gspca_dev* %0, %struct.gspca_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %8 = call i32 @cit_send_x_01_00_05(%struct.gspca_dev* %7, i32 136)
  %9 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @cit_send_x_00_05(%struct.gspca_dev* %9, i32 %10)
  %12 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @cit_send_x_00_05_02_08_01(%struct.gspca_dev* %12, i32 %13)
  %15 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %16 = call i32 @cit_send_x_00_05(%struct.gspca_dev* %15, i32 136)
  %17 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @cit_send_x_00_05_02_01(%struct.gspca_dev* %17, i32 %18)
  %20 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %21 = call i32 @cit_send_x_00_05(%struct.gspca_dev* %20, i32 137)
  %22 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @cit_send_x_00(%struct.gspca_dev* %22, i32 %23)
  %25 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %26 = call i32 @cit_send_00_04_06(%struct.gspca_dev* %25)
  %27 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %28 = call i32 @cit_read_reg(%struct.gspca_dev* %27, i32 294, i32 0)
  %29 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %30 = call i32 @cit_send_FF_04_02(%struct.gspca_dev* %29)
  ret void
}

declare dso_local i32 @cit_send_x_01_00_05(%struct.gspca_dev*, i32) #1

declare dso_local i32 @cit_send_x_00_05(%struct.gspca_dev*, i32) #1

declare dso_local i32 @cit_send_x_00_05_02_08_01(%struct.gspca_dev*, i32) #1

declare dso_local i32 @cit_send_x_00_05_02_01(%struct.gspca_dev*, i32) #1

declare dso_local i32 @cit_send_x_00(%struct.gspca_dev*, i32) #1

declare dso_local i32 @cit_send_00_04_06(%struct.gspca_dev*) #1

declare dso_local i32 @cit_read_reg(%struct.gspca_dev*, i32, i32) #1

declare dso_local i32 @cit_send_FF_04_02(%struct.gspca_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
